<resources>
    <string name="app_name">DCStart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_bbs">论坛</string>
    <string name="title_homepage">首页</string>
    <string name="title_myclass">我的教务</string>
    <string name="title_personal">个人</string>
    <string name="NoLoadPage_text1">您还未登录</string>
    <string name="NoLoadPage_LogIn">登录</string>
    <string name="NoLoadPage_Register">注册</string>
    <string name="Register_Register">注册</string>
    <string name="RegisterPage_Reset">重置</string>
    <string name="listview_title">标题</string>
    <string name="listview_time">2019-11-2</string>
    <string name="listview_context">内容</string>
    <string name="name">账号/用户名</string>
    <string name="app_nameIT">大话IT</string>

    <string name="register">注册</string>
    <string name="send">发帖</string>
    <string name="sex">性别</string>
    <string name="modifycode">验证码</string>
    <string name="password">密码</string>
    <string name="password_sure">确认密码</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="visit">游客登陆</string>
    <string name="reg">注册</string>
    <string name="look">查看回复</string>
    <string name="reply">回复</string>
    <string name="del">删除</string>
    <string name="top">置顶</string>
    <string name="title">标题</string>

    <string name="section">版块:</string>
    <string name="rempwd">记住密码</string>
    <string name="login">登录</string>
    <string name="enter_title_activity_register">立即注册</string>
    <string name="title_activity_register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="enter_id">请输入您的学号</string>
    <string name="enter_mima">请输入您的密码</string>
    <string name="enter_login">已有账号，直接登录</string>
    <string name="cancel_fail">注销失败</string>
    <string name="account_empty">账号为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="cancel_success">注销成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="name_already_exist">用户名已经存在</string>
    <string name="pwd_not_the_same">两次密码输入不一样</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="pwd_check_empty">密码检测为空</string>
    <string name="resetpwd_fail">密码修改失败</string>
    <string name="resetpwd_success">密码修改成功</string>
    <string name="pwd_not_fit_user">用户名和密码不匹配，重新输入</string>
    <string name="name_not_exist">用户名不存在</string>
    <string name="pwd_new_empty">新密码为空</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shuru">请写出你的请假理由！！！</string>
    <string name="desc">图片描述</string>
    <string name="t_home">首页</string>
    <string name="t_serive">服务</string>
    <string name="t_chat">通知</string>
    <string name="t_person">我</string>

    <string name="p_name">昵称：</string>
    <string name="p_id">学号：</string>
    <string name="quit">退出登陆</string>
    <string name="pt1">个人资料</string>
    <string name="pt2">我的申请</string>
    <string name="pt3">消息通知</string>
    <string name="pt4">问题与反馈</string>
    <string name="pt5">分享应用</string>
    <string name="pt6">关于我们</string>
    <string name="setting">设置</string>

    <string name="h_t1">-渤大服务-</string>
    <string name="t1">校园卡谁的</string>
    <string name="con1">捡到一张校园卡，速度过来领</string>
    <string name="h_t2">-日常事务申请-</string>i
    <string name="add_xinxi">添加失物招领</string>

    <string name="telephone">手机号码</string>
    <string name="content">描述</string>

    <string name="xggrzx">修改个人信息</string>
    <string name="email">邮箱：</string>
    <string name="email_hao">2332446920@qq.com</string>
    <string name="tele">电话:</string>
    <string name="tele_id">16642712339</string>
    <string name="says">介绍下自己吧</string>
    <string name="geqian">个性签名:</string>
    <string name="xgimages">修改头像</string>
    <string name="nicheng">昵称:</string>

    <string name="id">账号：</string>
    <string name="collage">学院:</string>
    <string name="major">专业：</string>
    <string name="suse">宿舍:</string>
    <string name="submit">提交</string>
    <string name="nickname">昵称:</string>

    <string name="pict">从相册</string>
    <string name="pizhao">拍照</string>

    <string name="action_QR">二维码</string>
    <string name="add_friend">添加朋友</string>
    <string name="action_settings">设置</string>

    <string name="share">我的分享</string>

    <string name="appraise">评价我们</string>

    <string name="version">版本号：</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_person_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settingtitle">个人信息设置</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sex_title">性别</string>
    <string name="nick_name">昵称</string>
    <string name="tel_text">电话</string>
    <string name="age_text">年龄</string>
    <string name="intro_text">个性签名</string>
    <string name="sexx_text">性别</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
