<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="160dp"/>

    <RelativeLayout
        android:id="@+id/relayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LoginButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimary"
            android:text="@string/enter_title_activity_register"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwdtextview"
            android:layout_marginTop="52dp"
            android:background="?attr/actionModeSplitBackground"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp"

            android:textStyle="bold"/>

        <EditText
            android:id="@+id/pwdtextview"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_below="@+id/usertextview"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/enter_mima"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/usertextview"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="@string/enter_id"
            android:inputType="textPersonName"/>

        <CheckBox
            android:id="@+id/rememberbox"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_below="@+id/pwdtextview"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:text="@string/remember_password"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forgot_ps"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_below="@+id/pwdtextview"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/retrieve_password"
            android:textSize="14sp"/>
    </RelativeLayout>


</LinearLayout>