<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.EditPersonInfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:padding="0dp">


        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:background="@drawable/tab_menu_bg"
            android:src="?attr/homeAsUpIndicator"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="用户信息"
            android:textSize="19sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.29"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/head_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitCenter" />

                <Button
                    android:id="@+id/button_changeimg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    android:elevation="4dp"
                    android:text="@string/xgimages"
                    android:textColor="@color/blue"
                    android:textSize="17sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/p_id"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="16051029"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/nickname"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/byname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="江南"
                    android:textSize="17sp"/>
            </LinearLayout>

            <View
                android:id="@+id/view"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <View
                android:id="@+id/view2"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.04"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/sex"
                    android:textSize="17sp"/>

                <Spinner
                    android:id="@+id/sex"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:entries="@array/sex"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    />


            </LinearLayout>

            <View
                android:id="@+id/view3"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/email"
                    android:textSize="17sp"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:text="2332446920@qq.com"
                    android:textSize="17sp"/>


            </LinearLayout>

            <View
                android:id="@+id/view4"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/collage"
                    android:textSize="17sp"
                    />

                <EditText
                    android:id="@+id/collage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:text="信息科学与技术"
                    android:textSize="17sp"/>

                <View
                    android:id="@+id/view7"
                    style="@style/bg_line"
                    android:layout_width="wrap_content"
                    android:layout_height="2px"
                    android:layout_weight="0.29" />


            </LinearLayout>

            <View
                android:id="@+id/view5"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/major"
                    android:textSize="17sp"
                    />

                <EditText
                    android:id="@+id/major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:text="计算机科学与技术"
                    android:textSize="17sp"/>


            </LinearLayout>

            <View
                android:id="@+id/view6"
                style="@style/bg_line"
                android:layout_width="wrap_content"
                android:layout_height="2px"
                android:layout_weight="0.29"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/tele"
                    android:textSize="17sp"
                    />


                <EditText
                    android:id="@+id/tele"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:text="16642712339"
                    android:textSize="17sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/suse"
                    android:textSize="17sp"/>


                <EditText
                    android:id="@+id/dnumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="1434"
                    android:textSize="17sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/geqian"
                    android:textSize="14sp"/>


                <EditText
                    android:id="@+id/says"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/says"
                    android:paddingLeft="10dp"
                    android:textSize="17sp"/>


            </LinearLayout>

            <Button
                android:id="@+id/p_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>